--- a/views/index.html
+++ b/views/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Skool API</title>
+    <title>College Management API</title>
   </head>
   <body>
-    <h1>Skool</h1>
+    <h1>College Management API</h1>
   </body>
 </html>
